Primeras lineas de codigo, faltan muchas muchas

--- a/LCCBot.ipynb
+++ b/LCCBot.ipynb
@@ -68,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.15 ('chatterbot_example')",
+   "display_name": "Python 3.6.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -82,12 +82,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.6.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "693b4c30aa9eff9f8d0da6dc313081d2b97deda0eb9065d9b9eb4a06793e7f36"
+    "hash": "9c43f423247bd0c67f6de4973e7e9f0055dbd5fe8e4d93d86b635664657df2b2"
    }
   }
  },
