Added basic chatbot functionality

--- a/LCCBot.ipynb
+++ b/LCCBot.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from chatterbot import ChatBot\n",
-    "from chatterbot.trainers import ListTrainer"
+    "from chatterbot.trainers import ListTrainer\n",
+    "import os"
    ]
   },
   {
@@ -17,7 +18,44 @@
    "outputs": [],
    "source": [
     "#Creamos un bot llamado LCCBot\n",
-    "chatbot2 = ChatBot('LCCBot')"
+    "chatbot = ChatBot(\n",
+    "    'Hola Mundo',\n",
+    "    logic_adapters=[{\n",
+    "        'default_response': 'Lo siento, no entendi lo que acabas de decir'\n",
+    "    }],\n",
+    "    read_only = True\n",
+    "\n",
+    "    )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entrenamiento para saludos o conversacion simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = 'training_data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in os.listdir(folder):\n",
+    "    print('\\n Chatbot training with '+os.path.join(folder, filename)+' file')\n",
+    "    training_data = open(os.path.join(folder, filename)).read().splitlines()\n",
+    "    trainer = ListTrainer(chatbot) # bot training\n",
+    "    trainer.train(training_data)"
    ]
   },
   {
@@ -34,41 +72,21 @@
     }
    ],
    "source": [
-    "trainer2 = ListTrainer(chatbot2)\n",
-    "\n",
-    "trainer2.train([\n",
-    "    #PREGUNTA\n",
-    "    \"¿Cuando entramos a clase?.\",\n",
-    "    #RESPUESTA \n",
-    "    \"Entramos el 6 de enero\",\n",
-    "    # LA RSPUESTA DE ARRIBA DEBE DE TENER ALGUNA SIMILITUD CON LA PREGUNTA DE ABAJO Y ASI SUCESIVAMENTE\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entramos el 6 de enero\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Obtenemos una respuesta a partir de una palabra clave o una frase\n",
-    "response = chatbot2.get_response('clases?')\n",
-    "\n",
-    "print(response)"
+    "print('Bienvenido al Chatbot!')\n",
+    "response = \"\"\n",
+    "while True:\n",
+    "    request = input('Tu:')\n",
+    "    if request == \"Salir\" or request == \"salir\":\n",
+    "        print(\"Bot: Salir\")\n",
+    "        break\n",
+    "    response = chatbot.get_response(request)\n",
+    "    print(f'Bot: {response}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.15 ('chatterbot_example')",
+   "display_name": "chatbot",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +105,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "693b4c30aa9eff9f8d0da6dc313081d2b97deda0eb9065d9b9eb4a06793e7f36"
+    "hash": "bf6b9bfa34dae283530fdfc4d5b1488cb2709028b063d23e44e8640d0be62240"
    }
   }
  },
